Updated observed-resource-generation
